--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>CSC 221 Web Pages</h2>
         <ul>
             <li><a href="helloworld.html">Hello World</a></li>
-            <li><a href="">Brownsville Bagels Menu</a></li>
+            <li><a href="bagels.html">Brownsville Bagels Menu</a></li>
             <li>more to come...</li>
         </ul>
         <h2>Civic Engagement Project</h2>
