--- a/bagels.html
+++ b/bagels.html
@@ -47,7 +47,7 @@
                             <li>Large $2.99</li>
                             <li>Bottled Spring Water $2.50</li>
                         </ul>  
-            <img src = "bagel.jpg" width = "400" />
+            <img src = "bagel.jpg" style="width: 70%; display: block; margin: auto;"/>
     </td>
     </tr>
 		</table>	
