--- a/bagels.html
+++ b/bagels.html
@@ -30,7 +30,7 @@
                         </ul>
              <h3>Extras</h3>
                         <ul>
-                            <li>Cream Chees $1.25</li>
+                            <li>Cream Cheese $1.25</li>
                             <li>Herbed Cream Cheese $1.75</li>
                         </ul>    
             <h3>Bagel Sandwiches</h3>
