--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 <!--Program Purpose: This is my PVCC index file. It will have links to all my coursework.-->
     <head>
         <title>Ethan Mallon</title>
+        <style>
+a{color: #D8D2BC; text-decoration: none;font-weight: bold;}
+a:link {color: #D8D2BC;}
+a:visited {color:#B3A894;}
+a:hover {color: #817567}
+a:active {color: #D8D2BC;}
+body{background-color: #5D6474; font-family: Arial, Helvetica, sans-serif; background-image: url(index-wp.jpg);}
+h1{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-weight: bold;}
+h2{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-weight: bold;}
+table{width: 40%; color: #D8D2BC; background-color: #773532; margin: auto;}
+ul{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-weight: bold;}
+li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-size: 1.32em;}
+        </style>
     </head>
-    <body style="background-color: #5D636F; font-family: Arial, Helvetica, sans-serif;">
-    <table border="2" style="width: 40%; color: #D8D2BC; background-color: #773532; margin: auto;">
+    <body>
+    <table border="5">
     <tr><td><ul>
         <h1>Ethan Mallon</h1>
         <h2>Google Slides Chapters</h2>
