--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
     </head>
     <body>
     <table border="5">
-    <tr><td><ul>
+        <tr>
+            <td><a href="index.html">Home</a></td>
+            <td><a href="https://www.pvcc.edu">PVCC</a></td>
+            <td><a href="https://www.w3schools.com/html/">W3 Schools</a></td>
+            <td><a href="https://github.com/">GitHub</a></td>
+            <td><a href="contactus.html">Contact Us</a></td>
+        </tr>
+    <tr><td colspan="5"><ul>
         <h1>Ethan Mallon</h1>
         <h2>Google Slides Chapters</h2>
         <ul>
