--- a/contactus.html
+++ b/contactus.html
@@ -27,31 +27,8 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
             <td><a href="https://github.com/">GitHub</a></td>
             <td><a href="contactus.html">Contact Us</a></td>
         </tr>
-    <tr><td colspan="5"><ul>
-        <h1>Ethan Mallon</h1>
-        <h2>Google Slides Chapters</h2>
-        <ul>
-            <li><a href="https://docs.google.com/presentation/d/1DSWEgQeNi3rQOn3mAr0jMoM_y1YIF4RHsBGWk_jlmK8/edit?usp=sharing">Chapter 0: Seven Big Ideas of Computer Science</a></li>
-            <li><a href="https://docs.google.com/presentation/d/1zqMlRWvUv5rTrTJnRdeEakP7k63YPPAFzKgN9GaBGlc/edit?usp=sharing">Civic Engagement</a></li>
-            <li><a href="https://docs.google.com/presentation/d/1QZC3QASRAnRiNTqVebVXYRXmPWebgdRkvHkBRoOZNSc/edit?usp=sharing">Chapter 1: Data Storage</a></li>
-            <li><a href="https://docs.google.com/presentation/d/11QtQIvzllpwQr4jhqvdQ_YqBS0JmC1Zu0kpk7u3kArY/edit?usp=sharing">Chapter 2: Machine Architecture</a></li>
-        </ul>
-
-        <h2>CSC 221 Web Pages</h2>
-        <ul>
-            <li><a href="helloworld.html">Hello World</a></li>
-            <li><a href="bagels.html">Brownsville Bagels Menu</a></li>
-            <li><a href="githubinfo.html">GitHub Information</a></li>
-            <li><a href="planets.html">Planets</a></li>
-            <li>more to come...</li>
-        </ul>
-        <h2>Civic Engagement Project</h2>
-        <ul><li>more to come...</li></ul>
-
-        <h2>CSC 221 Python Programs</h2>
-        <ul><li>more to come...</li></ul>
-        <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
-    </ul>
+    <tr><td colspan="5">
+        <iframe src="https://forms.gle/gXKhTS5u1qhNZPzW6" width="100%" height="750"></iframe>
     </td>
     </tr>
     </table>   
