--- a/planets.html
+++ b/planets.html
@@ -86,7 +86,7 @@ li{background-color: #000427; font-family: Arial, Helvetica, sans-serif; font-we
         </tr>
         <tr>
             <td colspan="5">
-                NOTE: One Atronomical Unit (AU) refers to the average distance between the Earth and Sun.
+                NOTE: One Astronomical Unit (AU) refers to the average distance between the Earth and Sun.
             </td>
         </tr>
         <tr><td colspan="5"> <iframe width="560" height="315" margin="auto" src="https://www.youtube.com/embed/lcZTcfdZ3Ow"></iframe></td></tr>
