--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
         <ul><li>more to come...</li></ul>
 
         <h2>CSC 221 Python Programs</h2>
-        <ul><li>more to come...</li></ul>
+        <ul><li><a href="tickets.py">Movie Tickets</a></li>
+            <li>more to come...</li></ul>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
     </ul>
     </td>
