--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
             <li><a href="githubinfo.html">GitHub Information</a></li>
             <li><a href="planets.html">Planets</a></li>
             <li><a href="ch3opsys.html">Chapter 3 Terms and Definitions</a></li>
+            <li><a href="ch4network.html">Chapter 4 Terms and Definitions</a></li>
             <li>more to come...</li>
         </ul>
         <h2>Civic Engagement Project</h2>
