--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
 
         <h2>CSC 221 Python Programs</h2>
         <ul><li><a href="tickets.py">Movie Tickets</a></li>
+        <li><a href="bbbqb.py">Branch BBQ Buffet</a></li>
             <li>more to come...</li></ul>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
     </ul>
