--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
             <li>more to come...</li>
         </ul>
         <h2>Civic Engagement Project</h2>
-        <ul><li>more to come...</li></ul>
+        <ul><li><a href="home.html">US Title Code 50</a></li></ul>
 
         <h2>CSC 221 Python Programs</h2>
         <ul><li><a href="tickets.py">Movie Tickets</a></li>
