--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
         <h2>CSC 221 Python Programs</h2>
         <ul><li><a href="tickets.py">Movie Tickets</a></li>
         <li><a href="bbbqb.py">Branch BBQ Buffet</a></li>
+        <li><a href="petvet.py">Veteranarian</a></li>
+        <li><a href="ppt.py">Personal Property Tax</a></li>
+        <li><a href="tuition.py">Personal Property Tax</a></li>
             <li>more to come...</li></ul>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
     </ul>
