--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
             <li><a href="ch3opsys.html">Chapter 3 Terms and Definitions</a></li>
             <li><a href="ch4network.html">Chapter 4 Terms and Definitions</a></li>
             <li><a href="programming.html">Chapter 5 Terms and Definitions</a></li>
+            <li><a href="ch6programming.html">Chapter 6 Terms and Definitions</a></li>
             <li>more to come...</li>
         </ul>
         <h2>Civic Engagement Project</h2>
@@ -56,7 +57,11 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
         <li><a href="bbbqb.py">Branch BBQ Buffet</a></li>
         <li><a href="petvet.py">Veteranarian</a></li>
         <li><a href="ppt.py">Personal Property Tax</a></li>
-        <li><a href="tuition.py">Personal Property Tax</a></li>
+        <li><a href="tuition.py">College Tuition</a></li>
+        <li><a href="ppt.py">Personal Property Tax</a></li>
+        <li><a href="ppt-list.py">Personal Property Tax (Using Lists)</a></li>
+        <li><a href="pizza.py">Palermo Pizza</a></li>
+        <li><a href="ball.py">Magic 8 Ball</a></li>
             <li>more to come...</li></ul>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
     </ul>
