--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
         <li><a href="ppt-list.py">Personal Property Tax (Using Lists)</a></li>
         <li><a href="pizza.py">Palermo Pizza</a></li>
         <li><a href="ball.py">Magic 8 Ball</a></li>
+        <li><a href="dogs.py">Dog Names</a></li>
             <li>more to come...</li></ul>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
     </ul>
