--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
             <li><a href="ch4network.html">Chapter 4 Terms and Definitions</a></li>
             <li><a href="programming.html">Chapter 5 Terms and Definitions</a></li>
             <li><a href="ch6programming.html">Chapter 6 Terms and Definitions</a></li>
+            <li><a href="ch7.html">Chapter 7 Terms and Definitions</a></li>
             <li>more to come...</li>
         </ul>
         <h2>Civic Engagement Project</h2>
@@ -63,6 +64,8 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
         <li><a href="pizza.py">Palermo Pizza</a></li>
         <li><a href="ball.py">Magic 8 Ball</a></li>
         <li><a href="dogs.py">Dog Names</a></li>
+        <li><a href="fresh.py">Fresh Food</a></li>
+
             <li>more to come...</li></ul>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
     </ul>
