--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
         <li><a href="ball.py">Magic 8 Ball</a></li>
         <li><a href="dogs.py">Dog Names</a></li>
         <li><a href="fresh.py">Fresh Food</a></li>
+        <li><a href="output.py">Output</a></li>
+        <li><a href="customer.py">Input</a> with <a href="cust_data.csv">Customer Data File</a></li>
 
             <li>more to come...</li></ul>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
