--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ li{background-color: #773532; font-family: Arial, Helvetica, sans-serif; font-we
         <li><a href="output.py">Output</a></li>
         <li><a href="customer.py">Input</a> with <a href="cust_data.csv">Customer Data File</a></li>
         <li><a href="tuition-w-html.py">Output to HTML</a></li>
-            <li>more to come...</li></ul>
+        <li><a href="emerald2.py">Emerald Resorts and Hotels</a></li>
         <img src="myindeximage.png" style="width: 70%; display: block; margin: auto;">
     </ul>
     </td>
